<resources>
    <string name="app_name">Suit Test</string>
    <string name="hint_name">Name</string>
    <string name="error_name">The name field must be filled in</string>
    <string name="hint_palindrome">Palindrome</string>
    <string name="btn_check">CHECK</string>
    <string name="btn_next">NEXT</string>
    <string name="tv_welcome">Welcome</string>
    <string name="placeholder_fullName">John Doe</string>
    <string name="label_username">Selected User Name</string>
    <string name="btn_user">Choose a User</string>
    <string name="tv_username">Firstname Lastname</string>
    <string name="tv_email">EMAIL@EMAIL.COM</string>
    <string name="dialog_true">isPalindrome</string>
    <string name="dialog_false">not palindrome</string>
    <string name="empty_item">No more items to load</string>
</resources>